[gd_scene load_steps=11 format=3 uid="uid://b48yh5bsuxijs"]

[ext_resource type="Script" uid="uid://b8uh4bsrok1si" path="res://controls.gd" id="1_dwka6"]
[ext_resource type="Script" uid="uid://dvlog024ejgpo" path="res://Seats.gd" id="1_yjg6u"]
[ext_resource type="Script" uid="uid://d2q2ksdv5x3q3" path="res://search6.gd" id="2_h5e0k"]
[ext_resource type="Script" uid="uid://dsxaie32gy6o8" path="res://search5.gd" id="2_upf03"]
[ext_resource type="Script" uid="uid://ctgl16wkwduj" path="res://halt6.gd" id="3_dwka6"]
[ext_resource type="Script" uid="uid://yhsmdrvxgb0h" path="res://halt5.gd" id="3_h5e0k"]
[ext_resource type="Script" uid="uid://b662vwxf7ltt0" path="res://search4.gd" id="4_dwka6"]
[ext_resource type="Script" uid="uid://lq48jx7afq6s" path="res://halt4.gd" id="5_dpy4t"]
[ext_resource type="Script" uid="uid://dkn016n61cmbw" path="res://search3.gd" id="6_56rdx"]
[ext_resource type="Script" uid="uid://c12gycs4hrji" path="res://halt3.gd" id="7_4gl0g"]

[node name="BasicRoot" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -6.0
offset_right = 1245.0
offset_bottom = 277.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 9.0
offset_top = 8.0
offset_right = 521.0
offset_bottom = 128.0

[node name="TextEdit1" type="TextEdit" parent="."]
offset_left = 536.0
offset_top = 53.0
offset_right = 582.0
offset_bottom = 79.0
text = "5003"

[node name="TextEdit2" type="TextEdit" parent="."]
offset_left = 536.0
offset_top = 82.0
offset_right = 582.0
offset_bottom = 108.0
text = "4349"

[node name="TextEdit3" type="TextEdit" parent="."]
offset_left = 536.0
offset_top = 111.0
offset_right = 582.0
offset_bottom = 137.0
text = "3323"

[node name="TextEdit4" type="TextEdit" parent="."]
offset_left = 536.0
offset_top = 140.0
offset_right = 582.0
offset_bottom = 166.0
text = "2141"

[node name="TextEdit5" type="TextEdit" parent="."]
offset_left = 536.0
offset_top = 169.0
offset_right = 582.0
offset_bottom = 195.0
text = "677"

[node name="TextEdit6" type="TextEdit" parent="."]
offset_left = 536.0
offset_top = 198.0
offset_right = 582.0
offset_bottom = 224.0
text = "4951"

[node name="TextEdit7" type="TextEdit" parent="."]
offset_left = 590.0
offset_top = 53.0
offset_right = 636.0
offset_bottom = 79.0
text = "4157"

[node name="TextEdit8" type="TextEdit" parent="."]
offset_left = 590.0
offset_top = 82.0
offset_right = 636.0
offset_bottom = 108.0
text = "2791"

[node name="TextEdit9" type="TextEdit" parent="."]
offset_left = 590.0
offset_top = 111.0
offset_right = 636.0
offset_bottom = 137.0
text = "1811"

[node name="TextEdit10" type="TextEdit" parent="."]
offset_left = 590.0
offset_top = 140.0
offset_right = 636.0
offset_bottom = 166.0
text = "643"

[node name="TextEdit11" type="TextEdit" parent="."]
offset_left = 590.0
offset_top = 169.0
offset_right = 636.0
offset_bottom = 195.0
text = "4919"

[node name="TextEdit12" type="TextEdit" parent="."]
offset_left = 590.0
offset_top = 198.0
offset_right = 636.0
offset_bottom = 224.0
text = "3929"

[node name="TextEdit13" type="TextEdit" parent="."]
offset_left = 644.0
offset_top = 53.0
offset_right = 690.0
offset_bottom = 79.0
text = "2767"

[node name="TextEdit14" type="TextEdit" parent="."]
offset_left = 644.0
offset_top = 82.0
offset_right = 690.0
offset_bottom = 108.0
text = "1733"

[node name="TextEdit15" type="TextEdit" parent="."]
offset_left = 644.0
offset_top = 111.0
offset_right = 690.0
offset_bottom = 137.0
text = "439"

[node name="TextEdit16" type="TextEdit" parent="."]
offset_left = 644.0
offset_top = 140.0
offset_right = 690.0
offset_bottom = 166.0
text = "4799"

[node name="TextEdit17" type="TextEdit" parent="."]
offset_left = 644.0
offset_top = 169.0
offset_right = 690.0
offset_bottom = 195.0
text = "3529"

[node name="TextEdit18" type="TextEdit" parent="."]
offset_left = 644.0
offset_top = 198.0
offset_right = 690.0
offset_bottom = 224.0
text = "2389"

[node name="TextEdit19" type="TextEdit" parent="."]
offset_left = 698.0
offset_top = 53.0
offset_right = 744.0
offset_bottom = 79.0
text = "1171"

[node name="TextEdit20" type="TextEdit" parent="."]
offset_left = 698.0
offset_top = 82.0
offset_right = 744.0
offset_bottom = 108.0
text = "349"

[node name="TextEdit21" type="TextEdit" parent="."]
offset_left = 698.0
offset_top = 111.0
offset_right = 744.0
offset_bottom = 137.0
text = "4751"

[node name="TextEdit22" type="TextEdit" parent="."]
offset_left = 698.0
offset_top = 140.0
offset_right = 744.0
offset_bottom = 166.0
text = "3329"

[node name="TextEdit23" type="TextEdit" parent="."]
offset_left = 698.0
offset_top = 169.0
offset_right = 744.0
offset_bottom = 195.0
text = "2347"

[node name="TextEdit24" type="TextEdit" parent="."]
offset_left = 698.0
offset_top = 198.0
offset_right = 744.0
offset_bottom = 224.0
text = "787"

[node name="TextEdit25" type="TextEdit" parent="."]
offset_left = 753.0
offset_top = 53.0
offset_right = 799.0
offset_bottom = 79.0
text = "281"

[node name="TextEdit26" type="TextEdit" parent="."]
offset_left = 753.0
offset_top = 81.0
offset_right = 799.0
offset_bottom = 107.0
text = "281"

[node name="TextEdit27" type="TextEdit" parent="."]
offset_left = 753.0
offset_top = 110.0
offset_right = 799.0
offset_bottom = 136.0
text = "281"

[node name="TextEdit28" type="TextEdit" parent="."]
offset_left = 753.0
offset_top = 139.0
offset_right = 799.0
offset_bottom = 165.0
text = "281"

[node name="TextEdit29" type="TextEdit" parent="."]
offset_left = 753.0
offset_top = 168.0
offset_right = 799.0
offset_bottom = 194.0
text = "281"

[node name="TextEdit30" type="TextEdit" parent="."]
offset_left = 753.0
offset_top = 197.0
offset_right = 799.0
offset_bottom = 223.0
text = "281"

[node name="TextEdit31" type="TextEdit" parent="."]
offset_left = 807.0
offset_top = 53.0
offset_right = 853.0
offset_bottom = 79.0
text = "281"

[node name="TextEdit32" type="TextEdit" parent="."]
offset_left = 807.0
offset_top = 81.0
offset_right = 853.0
offset_bottom = 107.0
text = "281"

[node name="TextEdit33" type="TextEdit" parent="."]
offset_left = 807.0
offset_top = 110.0
offset_right = 853.0
offset_bottom = 136.0
text = "281"

[node name="TextEdit34" type="TextEdit" parent="."]
offset_left = 807.0
offset_top = 139.0
offset_right = 853.0
offset_bottom = 165.0
text = "281"

[node name="TextEdit35" type="TextEdit" parent="."]
offset_left = 807.0
offset_top = 168.0
offset_right = 853.0
offset_bottom = 194.0
text = "281"

[node name="TextEdit36" type="TextEdit" parent="."]
offset_left = 807.0
offset_top = 197.0
offset_right = 853.0
offset_bottom = 223.0
text = "281"

[node name="Controls1" type="TextEdit" parent="."]
offset_left = 270.0
offset_top = 137.0
offset_right = 299.0
offset_bottom = 175.0
text = "G"
context_menu_enabled = false
emoji_menu_enabled = false
script = ExtResource("1_dwka6")

[node name="Controls2" type="TextEdit" parent="."]
offset_left = 504.0
offset_top = 137.0
offset_right = 533.0
offset_bottom = 175.0
text = "C"
context_menu_enabled = false
emoji_menu_enabled = false
script = ExtResource("1_dwka6")

[node name="Controls3" type="TextEdit" parent="."]
offset_left = 270.0
offset_top = 177.0
offset_right = 299.0
offset_bottom = 215.0
text = "F"
context_menu_enabled = false
emoji_menu_enabled = false
script = ExtResource("1_dwka6")

[node name="Controls4" type="TextEdit" parent="."]
offset_left = 504.0
offset_top = 178.0
offset_right = 533.0
offset_bottom = 216.0
text = "C"
context_menu_enabled = false
emoji_menu_enabled = false
script = ExtResource("1_dwka6")

[node name="Controls5" type="TextEdit" parent="."]
offset_left = 270.0
offset_top = 218.0
offset_right = 299.0
offset_bottom = 256.0
text = "E"
context_menu_enabled = false
emoji_menu_enabled = false
script = ExtResource("1_dwka6")

[node name="Controls6" type="TextEdit" parent="."]
offset_left = 505.0
offset_top = 218.0
offset_right = 534.0
offset_bottom = 256.0
text = "G"
context_menu_enabled = false
emoji_menu_enabled = false
script = ExtResource("1_dwka6")

[node name="targetSeats" type="TextEdit" parent="."]
offset_left = 14.0
offset_top = 164.0
offset_right = 70.0
offset_bottom = 202.0
text = "200"

[node name="Iterations" type="TextEdit" parent="."]
offset_left = 41.0
offset_top = 290.0
offset_right = 93.0
offset_bottom = 330.0
text = "20"
placeholder_text = "iter"

[node name="MatrixName" type="TextEdit" parent="."]
offset_left = 135.0
offset_top = 165.0
offset_right = 257.0
offset_bottom = 200.0
placeholder_text = "CommentField"

[node name="Seats" type="TextEdit" parent="."]
offset_left = 115.0
offset_top = 293.0
offset_right = 188.0
offset_bottom = 329.0
text = "600"
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false
autowrap_mode = 1
script = ExtResource("1_yjg6u")

[node name="Code" type="TextEdit" parent="."]
offset_left = 869.0
offset_top = 10.0
offset_right = 1232.0
offset_bottom = 264.0
placeholder_text = "What On Earth Is All This
G, R and B are separate fitness functions.
Each one has a text box to the left, and to the right. A-Z fo 0 to maximum effect.
They measure something bad about the reverb: G 'density', R 'spacing', B 'bright'.
To the left means the START of the verb tail, to the right is the END of the verb tail.
There's a curve applied so the right settings still take effect, even if the verb tail
doesn't extend all the way to the end of the evaluation window.
Making G/Density at the START, 'Z' means 'LESS sound up front, all in the tail like a hall'
Making G/Density at the END 'Z' means 'early sound OK but have it cut off like a plate'
It's GC for a hall-like sound but can be CG (or more) to weight towards early plate-like density.
On smaller matrices if you don't see enough green 'space', increase it toward ZZ.
More R/Spacing in either place will make stuff more natural and distant and subdued.
It's OJ to have naturalness and darkness start about equal, but to let it go spacier in the tail.
Making B/Bright at the START, 'Z' means 'LESS brightness up front for a darker effect'
Making B/Bright at the END, 'Z' means 'make the reverb tail get darker with time'
It's OT to have naturalness and darkness start about equal, but to make the tail darker.
The bars of color at the bottom show how much each quality affects the result:
for instance if Bright is hard at work verbs will be dark and the blue bar's wider.
Dark green is the proportion of end result delays that aren't primes. Bright green is those that are.
This will be different for each matrix size: mostly green is good but some R and B are good too.
If a color predominates, turn the letters for that color down closer to BB.
Literally picking AA for any of the fitness functions turns it off completely.
Note: each dot plotted is not any of the delays, but one of the COMBINATIONS of four delays, which are legion!
It's those that should be primes for best sound and verb layering."
wrap_mode = 1

[node name="search6" type="Button" parent="."]
offset_left = 11.0
offset_top = 228.0
offset_right = 61.0
offset_bottom = 259.0
text = "6x6"
script = ExtResource("2_h5e0k")

[node name="halt6" type="Button" parent="."]
offset_left = 20.0
offset_top = 426.0
offset_right = 68.0
offset_bottom = 457.0
text = "stop"
script = ExtResource("3_dwka6")

[node name="search5" type="Button" parent="."]
offset_left = 71.0
offset_top = 228.0
offset_right = 121.0
offset_bottom = 259.0
text = "5x5"
script = ExtResource("2_upf03")

[node name="halt5" type="Button" parent="."]
offset_left = 76.0
offset_top = 426.0
offset_right = 124.0
offset_bottom = 457.0
text = "stop"
script = ExtResource("3_h5e0k")

[node name="search4" type="Button" parent="."]
offset_left = 131.0
offset_top = 229.0
offset_right = 181.0
offset_bottom = 260.0
text = "4x4"
script = ExtResource("4_dwka6")

[node name="halt4" type="Button" parent="."]
offset_left = 135.0
offset_top = 425.0
offset_right = 183.0
offset_bottom = 456.0
text = "stop"
script = ExtResource("5_dpy4t")

[node name="search3" type="Button" parent="."]
offset_left = 190.0
offset_top = 228.0
offset_right = 240.0
offset_bottom = 259.0
text = "3x3"
script = ExtResource("6_56rdx")

[node name="halt3" type="Button" parent="."]
offset_left = 193.0
offset_top = 426.0
offset_right = 241.0
offset_bottom = 457.0
text = "stop"
script = ExtResource("7_4gl0g")

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 17.0
offset_top = 139.0
offset_right = 262.0
offset_bottom = 163.0
text = "dimensions and type of room"
scroll_active = false
autowrap_mode = 0

[node name="prevScoreTwo" type="RichTextLabel" parent="."]
offset_left = 70.0
offset_top = 198.0
offset_right = 253.0
offset_bottom = 222.0
text = "999999999999.9"
scroll_active = false
autowrap_mode = 0

[node name="totalIterations" type="RichTextLabel" parent="."]
offset_left = 721.0
offset_top = 3.0
offset_right = 817.0
offset_bottom = 27.0
text = "total tries"
scroll_active = false
autowrap_mode = 0

[node name="sinceIterations" type="RichTextLabel" parent="."]
offset_left = 65.0
offset_top = 383.0
offset_right = 118.0
offset_bottom = 407.0
text = "0"
scroll_active = false
autowrap_mode = 0

[node name="bestIterations" type="RichTextLabel" parent="."]
offset_left = 540.0
offset_top = 26.0
offset_right = 838.0
offset_bottom = 50.0
text = "new highscores and odds"
scroll_active = false
autowrap_mode = 0

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
offset_left = 78.0
offset_top = 170.0
offset_right = 128.0
offset_bottom = 194.0
text = "seats"

[node name="RichTextLabel13" type="RichTextLabel" parent="."]
offset_left = 18.0
offset_top = 198.0
offset_right = 68.0
offset_bottom = 222.0
text = "score:"

[node name="RichTextLabel11" type="RichTextLabel" parent="."]
offset_left = 541.0
offset_top = 3.0
offset_right = 724.0
offset_bottom = 27.0
text = "Variations tried so far:"

[node name="RichTextLabel12" type="RichTextLabel" parent="."]
offset_left = 538.0
offset_top = 233.0
offset_right = 850.0
offset_bottom = 257.0
text = "Matrix delays: any path across or down"

[node name="RichTextLabel8" type="RichTextLabel" parent="."]
offset_left = 306.0
offset_top = 143.0
offset_right = 495.0
offset_bottom = 167.0
text = "G: bloom, space, sustain"
horizontal_alignment = 3

[node name="RichTextLabel9" type="RichTextLabel" parent="."]
offset_left = 311.0
offset_top = 183.0
offset_right = 493.0
offset_bottom = 207.0
text = "R: naturalness, spacing"
horizontal_alignment = 3

[node name="RichTextLabel10" type="RichTextLabel" parent="."]
offset_left = 323.0
offset_top = 224.0
offset_right = 474.0
offset_bottom = 248.0
text = "B: darkness, depth"
horizontal_alignment = 3

[node name="Generating" type="CheckButton" parent="."]
offset_left = 215.0
offset_top = 294.0
offset_right = 332.0
offset_bottom = 325.0
focus_mode = 0
button_pressed = true
text = "continue"

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.001

[node name="Timer4" type="Timer" parent="."]
wait_time = 0.001

[node name="Timer5" type="Timer" parent="."]
wait_time = 0.001

[node name="Timer6" type="Timer" parent="."]
wait_time = 0.001

[node name="Timer1" type="Timer" parent="."]
one_shot = true
ignore_time_scale = true

[connection signal="text_changed" from="Controls1" to="Controls1" method="_text_changed"]
[connection signal="text_changed" from="Controls2" to="Controls2" method="_text_changed"]
[connection signal="text_changed" from="Controls3" to="Controls3" method="_text_changed"]
[connection signal="text_changed" from="Controls4" to="Controls4" method="_text_changed"]
[connection signal="text_changed" from="Controls5" to="Controls5" method="_text_changed"]
[connection signal="text_changed" from="Controls6" to="Controls6" method="_text_changed"]
[connection signal="text_changed" from="targetSeats" to="Seats" method="targetSeatsUpdated"]
[connection signal="timeout" from="Timer3" to="search3" method="_pressed"]
[connection signal="timeout" from="Timer4" to="search4" method="_pressed"]
[connection signal="timeout" from="Timer5" to="search5" method="_pressed"]
[connection signal="timeout" from="Timer6" to="search6" method="_pressed"]
